# HSF-India-GPU-IISER-Pune-2026

./: README.md
01/: Session1.ipynb
02/: Session2_advanced.ipynb
03/: Streaming and Visual Profiling.ipynb
04/: Session3_Python-GPU_HEP.ipynb  lesson-4-project.ipynb  lesson-4-workbook.ipynb
04/data/: README.md
05/: generator_tutorial_gpu_annotated.ipynb
06/: gpu_dd4hep_tilecal.ipynb  gpu_geant4_dd4hep_cuda_notebook.md
07/: cuda_neural_network_demo_complete.ipynb
08/: GPU challenge.ipynb
09/: RT_cores_ray_tracing_tutorial.ipynb
Pre-Trained-Model-Inference/: CMakeLists.txt  Readme.md  input.json  network.json
Pre-Trained-Model-Inference/src/: cpu_inference.cu  demo.cu
Pre-Trained-Model-Inference/src/.ipynb_checkpoints/: MVAModelsManager-checkpoint.h  main-checkpoint.cu  mock_dependencies-checkpoint.h
